[BUGFIX:css] Ensure that primary buttons are visible in dark mode

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -84,6 +84,12 @@ th, td {
     border-color: var(--md-slate-structureal-elements);
 }
 
+[data-md-color-scheme="slate"] .md-button--primary {
+    color: rgba(255, 255, 255, 1);
+    background-color: var(--md-slate-structureal-elements);
+    border-color: var(--md-slate-structureal-elements);
+}
+
 /* Add emphasizing box arround active link*/
 /*
 .md-nav__link--active {
